# xevo

./: .gitattributes  .gitignore  .readthedocs.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  azure-pipelines.yml  environment.yml  xevoConfig.cmake.in  xnioConfig.cmake.in
.azure-pipelines/: azure-pipelines-linux.yml
CMake/: External_googletest.cmake
conda/: cling.yml  docs.yml  readthedocs.yml  xeus.yml  xevo.yml  xnio.yml
conda-recipe/: bld.bat  build.sh  meta.yaml
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  api.rst  conf.py  conf.py.in  ga.md  ga_metadata.yml  index.md  index.rst  introduction.md  introduction.rst  main.rst  usage.md  usage.rst
include/xevo/: analytical_functions.hpp  functors.hpp  ga.hpp  pso.hpp  pso_ga.hpp
include/xnio/: analytical_functions.hpp  functors.hpp  ga.hpp
junbs/: analytical_functions.ipynb  optimisation_analytical_functions.ipynb  optimisation_analytical_functions_ga.ipynb  optimisation_analytical_functions_pso.ipynb
junbs/output/: branin_pop_0.npy  branin_pop_100.npy  branin_pop_120.npy  branin_pop_140.npy  branin_pop_150.npy  branin_pop_160.npy  branin_pop_180.npy  branin_pop_20.npy  branin_pop_210.npy  branin_pop_240.npy  branin_pop_270.npy  branin_pop_30.npy  branin_pop_40.npy  branin_pop_60.npy  branin_pop_80.npy  branin_pop_90.npy  rose_pop_0.npy  rose_pop_120.npy  rose_pop_150.npy  rose_pop_180.npy  rose_pop_210.npy  rose_pop_240.npy  rose_pop_270.npy  rose_pop_30.npy  rose_pop_60.npy  rose_pop_90.npy
recipe/: meta.yaml
test/: test_functors.cpp  test_ga.cpp  test_pso.cpp  test_pso_ga.cpp  unittest_main.cpp
